--- a/style.css
+++ b/style.css
@@ -340,12 +340,13 @@ body {
     align-items: center;
     gap: 6px;
     font-size: 12px; /* Уменьшили */
+    color: white; /* Добавил белый цвет */
 }
 
 /* Время */
 .message-time {
     opacity: 0.7;
-    font-size: 10px; /* Уменьшили */
+    font-size: 6px; /* Уменьшили */
     margin-left: 8px;
 }
 
